@@ -7,10 +7,13 @@ import org.apache.commons.lang.SystemUtils;
 import org.rosuda.REngine.Rserve.RConnection;
 import org.rosuda.REngine.Rserve.RserveException;
 
+import prerna.util.DIHelper;
+
 public class RSingleton {
 	
 	private static RConnection rcon = null;
 	static int port = 6311;
+	public static final String R_HOME="R_HOME";
 	static Hashtable <Integer, RConnection> portToCon = new Hashtable<Integer, RConnection>(); // RServe is not allowing me to inspect the port so I have to do this.. sorry
 	
 	private RSingleton() {
@@ -23,6 +26,11 @@ public class RSingleton {
 			String rHome = System.getenv("R_HOME");
 			System.out.println("RHome is ... " + rHome);
 			
+			// If R_HOME doesn't exist, then check RDF_Map
+			if(rHome == null || rHome.isEmpty()) {
+				rHome = DIHelper.getInstance().getProperty(R_HOME);
+			}
+			
 			rHome = rHome.replace("\\", System.getProperty("file.separator"));
 
 			rHome = rHome + System.getProperty("file.separator") + "bin" + System.getProperty("file.separator") + "R";
@@ -31,8 +39,17 @@ public class RSingleton {
 				rHome = rHome.replace(System.getProperty("file.separator"), "\\\\");
 
 			System.out.println("RHome is ... " + rHome);
+			
+			ProcessBuilder pb = new ProcessBuilder("" + rHome + "", "-e", "library(Rserve);Rserve(FALSE," + port + ",args='--vanilla');flush.console <- function(...) {return;};options(error=function() NULL)", "--vanilla");
+			Process process = pb.start();
 
-			Runtime.getRuntime().exec(" \"" + rHome + "\" -e \"library(Rserve);Rserve(FALSE,args='--vanilla --RS-port" + port + "');flush.console <- function(...) {return;}; options(error=function() NULL)\" --vanilla");
+			
+			//ProcessBuilder pb = new ProcessBuilder("\"" + rHome + "\"", "-e", "\"library(Rserve);Rserve(FALSE,args='--vanilla --RS-port" + port + "');flush.console <- function(...) {return;}; options(error=function() NULL)\"", "--vanilla");
+
+			//Process p = pb.start();
+			//p.destroy();
+			System.out.println("Started.. process builder.. !!");
+			//Runtime.getRuntime().exec(" \"" + rHome + "\" -e \"library(Rserve);Rserve(FALSE,args='--vanilla --RS-port" + port + "');flush.console <- function(...) {return;}; options(error=function() NULL)\" --vanilla");
 			//System.out.println("R Started.. going to end");
 			//Runtime.getRuntime().exec(" \"C:\\Program Files\\R\\R-3.3.0\\bin\\R.exe\" -e \"library(Rserve); library(RSclient); rsc <- RSconnect(port = 6311); RSshutdown(rsc)\" --vanilla");
 		} catch (IOException e) {
@@ -97,6 +114,7 @@ public class RSingleton {
 				
 				rcon = new RConnection(host, port);
 				portToCon.put(port, rcon);
+				ProcessBuilder pb;
 				
 			}catch(Exception ex)
 			{
